RESOLVED FIXED 244607
REGRESSION (253350@main): ASSERTION FAILED: [[dataSource webFrame] dataSource] || [[dataSource webFrame] provisionalDataSource] on fast/loader/opaque-base-url.html consistently
https://bugs.webkit.org/show_bug.cgi?id=244607
Summary REGRESSION (253350@main): ASSERTION FAILED: [[dataSource webFrame] dataSource...
Karl Rackler
Reported 2022-08-31 08:38:02 PDT
Description: fast/loader/opaque-base-url.html The test was consistently passing until at 253350@main when it began to crash consistently. REPRODUCTION STEPS I can reproduce this on 253350@main but cannot reproduce it on 253349@main or earlier. Command: run-webkit-tests --debug -1 --exit-after-n-failures 1 --exit-after-n-crashes-or-timeouts 1 --iterations 50 -f --no-retry fast/loader/opaque-base-url.html Result: Regressions: Unexpected crashes (1) fast/loader/opaque-base-url.html [ Crash ] History: https://results.webkit.org/?suite=layout-tests&test=fast%2Floader%2Fopaque-base-url.html&platform=mac&style=debug&flavor=wk1&limit=50000 Crash Log: Thread 0 Crashed:: Dispatch queue: com.apple.main-thread 0 com.apple.JavaScriptCore 0x113ae544e WTFCrash 1 DumpRenderTree 0x10fb8e1aa WTFCrashWithInfo(int, char const*, char const*, int) 2 DumpRenderTree 0x10fc1ed28 -[ResourceLoadDelegate webView:identifierForInitialRequest:fromDataSource:] 3 com.apple.WebKitLegacy 0x11e4d458a objc_object* wtfCallIMP<objc_object*, WebView*, objc_object*, objc_object*>(void (*)(), objc_object*, objc_selector*, WebView*, objc_object*, objc_object*) 4 com.apple.WebKitLegacy 0x11e4d28d4 CallDelegate(void (*)(), WebView*, objc_object*, objc_selector*, objc_object*, objc_object*) 5 com.apple.WebKitLegacy 0x11e4d2d34 CallResourceLoadDelegate(void (*)(), WebView*, objc_selector*, objc_object*, objc_object*) 6 com.apple.WebKitLegacy 0x11e3d1168 WebFrameLoaderClient::assignIdentifierToInitialRequest(WTF::ObjectIdentifier<WebCore::ResourceLoader>, WebCore::DocumentLoader*, WebCore::ResourceRequest const&) 7 com.apple.WebCore 0x19ec5f350 WebCore::ResourceLoadNotifier::assignIdentifierToInitialRequest(WTF::ObjectIdentifier<WebCore::ResourceLoader>, WebCore::DocumentLoader*, WebCore::ResourceRequest const&) 8 com.apple.WebCore 0x19ec66218 WebCore::ResourceLoader::willSendRequestInternal(WebCore::ResourceRequest&&, WebCore::ResourceResponse const&, WTF::CompletionHandler<void (WebCore::ResourceRequest&&)>&&) 9 com.apple.WebCore 0x19ec82280 WebCore::SubresourceLoader::willSendRequestInternal(WebCore::ResourceRequest&&, WebCore::ResourceResponse const&, WTF::CompletionHandler<void (WebCore::ResourceRequest&&)>&&)::$_3::operator()(WTF::CompletionHandler<void (WebCore::ResourceRequest&&)>&&, WebCore::ResourceRequest&&) 10 com.apple.WebCore 0x19ec807f6 WebCore::SubresourceLoader::willSendRequestInternal(WebCore::ResourceRequest&&, WebCore::ResourceResponse const&, WTF::CompletionHandler<void (WebCore::ResourceRequest&&)>&&)
Attachments
symbolicated-log (45.40 KB, text/plain)
2022-08-31 08:41 PDT, Karl Rackler
no flags
Radar WebKit Bug Importer
Comment 1 2022-08-31 08:38:20 PDT
Karl Rackler
Comment 2 2022-08-31 08:41:51 PDT
Created attachment 462051 [details] symbolicated-log
Karl Rackler
Comment 3 2022-08-31 08:45:00 PDT
I have marked this test as a consistent crash while this issue is investigated.
EWS
Comment 4 2022-08-31 08:50:55 PDT
Test gardening commit 253987@main (1d42bc3fa50b): <https://commits.webkit.org/253987@main> Reviewed commits have been landed. Closing PR #3854 and removing active labels.
Alexey Proskuryakov
Comment 5 2022-08-31 10:28:35 PDT
Same assertion failure on imported/w3c/web-platform-tests/content-security-policy/inheritance/iframe-all-local-schemes-inherit-self.sub.html
Chris Dumez
Comment 6 2022-08-31 13:28:38 PDT
EWS
Comment 7 2022-09-01 09:10:48 PDT
Committed 254043@main (1f26b9a6b8c9): <https://commits.webkit.org/254043@main> Reviewed commits have been landed. Closing PR #3873 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.