REGRESSION (253350@main): ASSERTION FAILED: [[dataSource webFrame] dataSource] || [[dataSource webFrame] provisionalDataSource] on fast/loader/opaque-base-url.html consistently https://bugs.webkit.org/show_bug.cgi?id=244607 <rdar://99384575>

Reviewed by Darin Adler.

Make sure that the FrameLoader moves to DisplayingInitialEmptyDocument state if
necessary before executing the JavaScript URL. Before 253350@main, this would
happen automatically since we would load "about:blank" in the frame before
executing the JS URL.

* LayoutTests/platform/mac-wk1/TestExpectations:
* Source/WebCore/loader/FrameLoader.cpp:
(WebCore::FrameLoader::executeJavaScriptURL):

Canonical link: https://commits.webkit.org/254043@main